Spacing changes in navbar, fixed steps

--- a/css/style.css
+++ b/css/style.css
@@ -696,7 +696,7 @@ h3 {
   text-transform: capitalize;
   font-weight: 400;
   display: inline-block;
-  padding: 30px 0 30px 0;
+  padding: 34px 0 30px 0;
   font-family: "Poppins", sans-serif;
   position: relative;
   text-transform: capitalize;
@@ -921,7 +921,7 @@ h3 {
 }
 
 .front_page .single_slider .doctor_pic img {
-  width: 103%;
+  width: 105%;
 }
 
 @media (max-width: 767px) {
